# easy-enhance

./: .gitignore  README.md  main.py  pyproject.toml
.docs/: checklist.md  purpose.md  spec.md  task.md
app/controller/: main_controller.py
app/core/: dataset_manager.py  job_manager.py  plugin_manager.py  report_manager.py  validator.py
app/gui/: app_shell.py
app/metrics/: metrics_engine.py
sample_plugin/sample_method/: main.py  manifest.json
