[project]
name = "easy-enhance"
version = "0.1.0"
description = "A desktop workbench for image enhancement evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.22.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pyiqa>=0.1.7",
]
